objects/ASI_CRM_Effective_supplier__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet/WS</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Effective Suppliers</relationshipLabel>
        <relationshipName>Effective_Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Last_tran_date__c</fullName>
        <label>Last depletion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Effective Suppliers (Supplier)</relationshipLabel>
        <relationshipName>Effective_Suppliers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Effective Supplier</label>
    <nameField>
        <displayFormat>EFS-{0000000}</displayFormat>
        <label>Effective Supplier ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Effective Suppliers</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Effective_Supplier</fullName>
        <active>true</active>
        <label>CN Effective Supplier</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>